--- a/WebQLDaoTao/Web.config
+++ b/WebQLDaoTao/Web.config
@@ -21,4 +21,12 @@
 	Initial Catalog=QLDaoTao;User Id=sa;Password=Quangnha2005@"
 			 />
 	</connectionStrings>
+	<system.webServer>
+		<defaultDocument>
+			<files>
+				<clear />
+				<add value="Login.aspx" />
+			</files>
+		</defaultDocument>
+	</system.webServer>
 </configuration>
